Button "Show Only Errors" does not show errors #115183

Closed
opened 2023-11-20 13:46:01 +01:00 by d;fgksd;flkg · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.6.0 Core Profile Context 23.11.1.231017

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: (newest version of Blender that worked as expected)

Short description of error
Shows animation keys errors only if group of animation cannals is expanded and was seen.

If animation has a key errors, button "Show Only Errors" doesn't show errors before you expand all groups of animation cannels and find all error youself's eyes.

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Enable the filter Show Only Errors (Note all keyframes are hidden)
  • Disable the Filter
  • Expand the action with items with errors
  • Collapse all
  • Enable the filter Show Only Errors

You will now see the items with errors.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.6.0 Core Profile Context 23.11.1.231017 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: (newest version of Blender that worked as expected) **Short description of error** Shows animation keys errors only if group of animation cannals is expanded and was seen. If animation has a key errors, button "Show Only Errors" doesn't show errors before you expand all groups of animation cannels and find all error youself's eyes. <video src="/attachments/3a0c00fa-c02e-46a2-bb8d-55d31ad33d23" title="2023-11-20 15-38-11.mp4" controls></video> **Exact steps for others to reproduce the error** - Open attached .blend file - Enable the filter *Show Only Errors* (Note all keyframes are hidden) - Disable the Filter - Expand the action with items with errors - Collapse all - Enable the filter *Show Only Errors* You will now see the items with errors.
d;fgksd;flkg added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-20 13:46:02 +01:00

Thank you for reporting the issue, @sdasdasdas.

For a more thorough investigation, could provide a .blend file that reliably exhibits this behavior? It would be very useful for troubleshooting.

Thank you for reporting the issue, @sdasdasdas. For a more thorough investigation, could provide a .blend file that reliably exhibits this behavior? It would be very useful for troubleshooting.
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-11-21 19:29:00 +01:00
Author

It's any file. You need:

  1. Add Armarute.
  2. Add ssome keys for a bone.
  3. Unlink Action.
  4. Rename bone.
  5. Link Action back.
  6. Press button "Show errors" and errors does't shows before expand all.

It's any file. You need: 1. Add Armarute. 2. Add ssome keys for a bone. 3. Unlink Action. 4. Rename bone. 5. Link Action back. 6. Press button "Show errors" and errors does't shows before expand all. <video src="/attachments/a106e2bc-cf42-42a8-8386-c43c572127d0" title="2023-11-22 13-20-19.mp4" controls></video>

Thank you for providing the additional information.
I can confirm that the behavior you've described.

I will forward this report to the development team for further inspection and resolution.

Thank you for providing the additional information. I can confirm that the behavior you've described. I will forward this report to the development team for further inspection and resolution.
Christoph Lendenfeld self-assigned this 2024-01-04 15:50:56 +01:00

did a dive into the code. The filtering code checks for the FCURVE_DISABLED flag, but that is only set once the channel is drawn.

Edit: Can't find a way to properly solve this. Ideally we'd validate all FCurves once the button has been toggled. I am not sure how to do this though.

did a dive into the code. The filtering code checks for the `FCURVE_DISABLED` flag, but that is only set once the channel is drawn. Edit: Can't find a way to properly solve this. Ideally we'd validate all FCurves once the button has been toggled. I am not sure how to do this though.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-18 10:27:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115183
No description provided.